--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "geist": "latest",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
+    "mongoose": "^8.17.1",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.5",
